# Babes-Bolyai-University

./: README.md
Semester 1/Computer Systems Arhitecture/Labs/2/: lab2IARA.asm  lab2IARA.lst
Semester 1/Computer Systems Arhitecture/Labs/3/: lab3IARA.asm  lab3IARA.lst  lab3iaralung.asm  lab3iaralung.lst  lab3iarasigned.asm  lab3iarasigned.lst
Semester 1/Computer Systems Arhitecture/Labs/4/: lab4iara.asm  lab4iara.lst
Semester 1/Fundamentals of programming/Labs/a1/: p1.py  (+2 more)
Semester 1/Fundamentals of programming/Lectures/: lecture1.py  lecture2.py  lecture3.py  lecture4.py  lecture6.py
Semester 2/Graph Algorithms/Assignment/: A1.rar
Semester 2/Object Oriented Programing/Assignments/A5/Tests/: CMakeLists.txt  controller_test.cpp  test_main.cpp
Semester 2/Object Oriented Programing/Assignments/A5/Tests/Controller/: test_trenchCoatController.cpp
Semester 3/Advanced Programming Methods/Laboratories/: Laboratories.rar
Semester 3/Computer Networks/Exams/: Ceva DRIVE.txt
Semester 3/Semester 3 Ro/Baze_de_Date/: rezolvari-lab-github-repo.txt
Semester 3/Semester 3 Ro/Metode_Avansate_de_Programare/: rezolvari-lab-inclusiv-proiect-extins-github-repo.txt
Semester 3/Semester 3 Ro/Programare_Logica_si_Functionala/: .p2_10_b.pl.swp
Semester 4/AI/Project/: ex.txt
Semester 4/DBMS/Exams/: 2.txt
Semester 4/Web Programming/Assignments/: A7.rar
Semester 4/Web Programming/Exams/: PregatireExamen.txt
Semester 5/Crypto/: bullshit.py  lab2.py  lab3.py  lab4.py  lab5.py  lftc.py  main.py  rsa_encrypt.cpp  states.txt  transitions.txt
Semester 5/LFTC/Examen/: index LFTC.docx  ponturi LFTC.docx  quizes LFTC.docx
Semester 5/LFTC/Lab1/: Math_Computation_BNF.txt  Math_Computation_UseCase.txt
Semester 5/LFTC/Lab2/: ChatGPT_Discussion.txt  Programs_Examples.txt
Semester 5/LFTC/Lab3/: Errors.txt  PIF.txt  documentation.txt  lexer.py  main.c  program.txt  symbol_table.c  symbol_table.h  tokens.txt
Semester 5/LFTC/Lab4/: PIF.txt  README.md  ST.txt  SUMMARY.txt  documentation.txt  finite_automata.py  lexer_fa.py
Semester 5/LFTC/Lab5/: README.md  grammar.txt  parse_tree.txt  parser.py  scanner.py
Semester 5/LFTC/Lab6/: README.md  derivations.txt  format_derivations.py  lexer_ply.py  main.py  parser_ply.py  parsetab.py
Semester 5/LFTC/Lab7/: README.md  first_follow.py  grammar_parser.py  ll1_parser.py  ll1_table.py  minidsl_grammar.txt  output.txt  parse_tree_table.py  parse_tree_table.txt  pif_reader.py  productions.txt  seminar_grammar.txt  test_minidsl.py  test_seminar.py
Semester 5/Mobiles/Mobile2/: .gitignore  README.md
Semester 5/PPD/: Makefile  matrix_threads.c
Semester 5/PPD/Examen/: Problem2_Corrected_Solutions.md  corrected_mpi_exercises.md
Semester 5/PPD/lab4 BUN/: AsyncAwaitDownloader.cs  DirectCallbackDownloader.cs  HttpParser.cs  Lab4.csproj  Program.cs  TaskContinuationDownloader.cs
Semester 5/PPD/lab5/: polynomial_mult.py
Semester 5/PPD/lab6/: Makefile  generate_graphs.py  graph.txt  graph2.txt  graph3.txt  hamiltonian.c
Semester 5/PPD/lab7/: Makefile  bigint_mpi.c  compare.c  compile.bat  polynomial_mpi.c  run_example.bat
Semester 5/PPD/lab8/: DSM.sln  README.md  dsm.py  dsm_messages.py  dsm_network.py  main.py
Semester 5/PPD/proiect/: .gitignore  CMakeLists.txt  README.md  VERIFICATION.md  build.bat  build.sh  main.py  requirements.txt
Semester 5/PPD/proiect/cpp/: CMakeLists.txt  README.md  build.sh  test.cpp
Semester 5/PPD/proiect/cpp/examples/: complex.cpp
Semester 5/PPD/proiect/cpp/include/: distributed_simulation.h  utils.h
Semester 5/PPD/proiect/cpp/src/: distributed_simulation.cpp  threaded_simulation.cpp
Semester 5/PPD/proiect/distributed/: __init__.py  simulation.py
Semester 5/PPD/proiect/examples/: benchmark.py  complex.py  distributed_example.cpp  distributed_example.py  simple.cpp  simple.py
Semester 5/PPD/proiect/include/: body.h  physics.h  threaded_simulation.h
Semester 5/PPD/proiect/shared/: __init__.py  body.py  physics.py  utils.py
Semester 5/PPD/proiect/src/: body.cpp  distributed_simulation.cpp  physics.cpp  threaded_simulation.cpp  utils.cpp
Semester 5/PPD/proiect/threaded/: __init__.py  simulation.py  visualizer.py
(+1066 files in other folders)
